# mcp-acertpix-apis

./: .gitignore  README.md  docker.md
acertpix-api-analise/: README.md  dockerfile  pyproject.toml
acertpix-api-analise/src/acertpix_api_analise/: server.py
acertpix-api-facematch/: dockerfile  pyproject.toml
acertpix-api-facematch/src/: server.py
acertpix-api-facematch/src/acertpix_api_facematch/: server.py
acertpix-api-flash/: README.md  dockerfile  pyproject.toml
acertpix-api-flash/src/acertpix_api_flash/: server.py
acertpix-api-lite/: README.md  dockerfile  pyproject.toml
acertpix-api-lite/src/: server.py
acertpix-api-lite/src/acertpix_api_lite/: server.py
acertpix-api-ocr/: .env_example  README.md  dockerfile  pyproject.toml
acertpix-api-ocr/src/: server.py
acertpix-api-ocr/src/acertpix_api_ocr/: server.py
acertpix-api-score/: README.md  dockerfile  pyproject.toml
acertpix-api-score-stdio/: README.md  dockerfile  pyproject.toml
acertpix-api-score-stdio/src/acertpix_api_score/: __main__.py
acertpix-api-score-stdio2/: dockerfile  pyproject.toml
acertpix-api-score-stdio2/src/acertpix_api_score/: server.py
acertpix-api-score/src/: server.py
acertpix-api-score/src/acertpix_api_analise/: server.py
acertpix-api-score/src/acertpix_api_biometria/: __init__.py  server.py
acertpix-api-score/src/acertpix_api_lite/: server.py
acertpix-api-score/src/acertpix_api_ocr/: server.py
acertpix-api-score/src/acertpix_api_score/: __init__.py  __main__.py  server.py
demo01/: README.md  pyproject.toml
demo01/src/demo01/: server.py
