[project]
name = "acertpix-api-analise"
version = "0.1.0"
description = "Servidor MCP para integração com API Analise PRO da Acertpix"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]
[[project.authors]]
name = "Marcelo Cabral Ghilardi"
email = "marcelo.cabral@acertpix.com.br"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
acertpix-api-analise = "acertpix_api_analise:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acertpix_api_analise"]
